<resources>
    <string name="app_name">James Bond</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity">James Bond</string>
    <string name="title_activity_select_movie">Select Movie</string>
    <string name="title_activity_quotes">Quotes</string>
    <string name="title_activity_gunbarrell">Gunbarrells</string>
    <string name="gun_barrels_button_label">Gun Barrels</string>
    <string name="bonds_button_label">Bonds</string>
    <string name="movie_posters_button_label">Posters</string>
    <string name="quotes_button_label">Quotes</string>
    <string name="grid_list_menu_title">Grid</string>
    <string name="open_quotes_image_view">Open Quotes Image View</string>
    <string name="close_quotes_image_view">Close Quotes Image View</string>
    <string-array name="list_movies_name">
        <item>Dr. No</item>
        <item>From Russia with Love</item>
        <item>Goldfinger</item>
        <item>Thunderball</item>
        <item>You Only Live Twice</item>
        <item>On Her Majesty\'s Secret Service</item>
        <item>Diamonds Are Forever</item>
        <item>Live and Let Die</item>
        <item>The Man with the Golden Gun</item>
        <item>The Spy Who Loved Me</item>
        <item>Moonraker</item>
        <item>For Your Eyes Only</item>
        <item>Octopussy</item>
        <item>A View to a Kill</item>
        <item>The Living Daylights</item>
        <item>Licence to Kill</item>
        <item>GoldenEye</item>
        <item>Tomorrow Never Dies</item>
        <item>The World Is Not Enough</item>
        <item>Die Another Day</item>
        <item>Casino Royale</item>
        <item>Quantum of Solace</item>
        <item>Skyfall</item>
    </string-array>
    <string-array name="list_movies_years">
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1967</item>
        <item>1969</item>
        <item>1971</item>
        <item>1973</item>
        <item>1974</item>
        <item>1977</item>
        <item>1979</item>
        <item>1981</item>
        <item>1983</item>
        <item>1985</item>
        <item>1987</item>
        <item>1989</item>
        <item>1995</item>
        <item>1997</item>
        <item>1999</item>
        <item>2002</item>
        <item>2006</item>
        <item>2008</item>
        <item>2012</item>
    </string-array>
    <string-array name="list_of_bond_actors">
        <item>Sean Connery</item>
        <item>George Lazenby</item>
        <item>Roger Moore</item>
        <item>Timothy Dalton</item>
        <item>Pierce Brosnan</item>
        <item>Daniel Craig</item>
    </string-array>
    <string name="title_activity_bond">Bonds</string>
    <string name="bond_photo_description">Actor who prortrayed bond photo</string>
    <string name="main_banner_description">Main Banner</string>
    <string name="grid_view_photo_description">Grid View Photo</string>
    <string name="list_view_photo_description">List View Photo</string>
    <string name="splash_logo_description">Splash Logo</string>
    <string name="splash_animation_description">Splash Animation</string>
    <string-array name="bonds_details">
        <item>Sir Thomas Sean Connery Kt. (born 25 August 1930) is a Scottish actor 
            and producer who has won an Academy Award, two BAFTA Awards (one of them being a 
            BAFTA Academy Fellowship Award) and three Golden Globes (including the Cecil B. 
            DeMille Award and a Henrietta Award). He was knighted by Elizabeth II in July 2000, 
            and received the Kennedy Center Honors in the US.</item>
        <item>George Robert Lazenby (born 5 September 1939) is an Australian actor and former model, 
            best known for portraying James Bond in the 1969 film On Her Majesty\'s Secret Service. 
            He remains the only actor to have played the role in only one Eon Productions film. He went 
            on to a career in films and television, including several roles spoofing the James Bond character.
             His name has become a metaphor for actors of lesser standing who have given non-iconic performances
              in major media franchises.</item>
        <item>Sir Roger George Moore, KBE (born 14 October 1927) is an English actor. 
                He is perhaps best known for playing British secret agent James Bond in the official 
                film series for seven films between 1973 and 1985. He appeared as Bond in more official 
                Bond films than any other actor, and is the oldest actor to play Bond. Moore also portrayed 
                Simon Templar in The Saint from 1962 to 1969. He is also a Goodwill Ambassador for the charity 
                organisation UNICEF.</item>
        <item>Timothy Peter Dalton (born 21 March 1944 or 1946) is a British actor of film and television.
             Dalton is known for portraying James Bond in The Living Daylights (1987) and Licence to Kill 
             (1989), as well as Rhett Butler in the television miniseries Scarlett (1994), an original sequel
              to Gone with the Wind.</item>
        <item>Pierce Brendan Brosnan (born 16 May 1953) is an Irish actor,
         film producer and environmentalist. After leaving comprehensive school at 16,
          Brosnan began training in commercial illustration. He then went on to train at the Drama
           Centre in London for three years. Following a stage acting career he rose to popularity in 
           the television series Remington Steele (1982–87).</item>
        <item>Daniel Wroughton Craig (born 2 March 1968) is an English actor.
             He has played British secret agent James Bond since 2006.
              Craig is an alumnus of the National Youth Theatre and graduated from the 
              Guildhall School of Music and Drama in London, beginning his career on stage.
               His early on-screen appearances were in the films Elizabeth, The Power of One and 
               A Kid in King Arthur\'s Court, and in Sharpe\'s Eagle and Zorro on television.</item>
    </string-array>
    <string-array name="dr_no_quotes">
        <item>Bond: I promise I won\'t steal your shells.
            Honey: I promise you you won\'t, either. Stay where you are!
            Bond: I can assure you, my intentions are strictly honourable.</item>
        <item>Bond: Those samples Strangways found were radioactive. Professor Dent told me
            they were worthless iron ore. He\'s either a bad Professor...
            Leiter: Or a bad liar.</item>
        <item>Bond: Your name Quarrel?
            Quarrel: Maybe.
            Bond: I am a friend of Commander Strangways.
            Quarrel: I like people who are friends of people.</item>
        <item>Dr. No: Unfortunately I misjudged you. You are just a stupid policeman whose luck has run out.</item>
        <item>Leiter: Hey Quarrel, if you see a dragon, you get in first and breath on him. With all that rum in you, he\'ll die happy.</item>
        <item>Bond: Looks like you\'re out to get me.
            Sylvia: It\'s an idea at that.</item>
        <item>Dr. No: SPECTRE. Special Executive for Counterintelligence, Revenge and Extortion. The four great cornerstones of power, headed by the greatest brains in the world.
            Bond: Correction, criminal brains.
            Dr. No: The successful criminal brain is always superior. It has to be.</item>
        <item>Bond: What gives?\n
            Moneypenny: Me, given an ounce of encouragement. You never take me to dinner looking like this, James. You never take me to dinner.Period.
            \nBond: I would, but M would have me court martialed for misuse of government property.
            \nMoneypenny: Flattery will get you nowhere. But don\'t stop trying.</item>
        <item>Bond: I have to leave immediately.
            Sylvia: [Kissing Bond] When did you say you had to leave.
            Bond: Immediately.. well, almost immediately.</item>
        <item>Bond: I have to leave immediately.
            Sylvia: [Kissing Bond] When did you say you had to leave.
            Bond: Immediately.. well, almost immediately.</item>
        <item>Dr. No: [over the PA] Go to the table. You see what is in the cage? Pick it up. [The black widow spider] Tonight!</item>
        <item>Bond:  Who are you working for?
Dent: I might as well tell you, as you wont live long enough to use that information... [He tries to shoot Bond but his gun is empty]
Bond: That\'s a Smith and Western and you\'ve had your six...</item>
        <item>Miss Taro: What should I say to a suggestion from a strange gentleman.
Bond: You should say yes.
Miss Taro: I should say maybe.</item>
        <item>M: Yes, I thought so, this damn Beretta. I\'ve told you about this before. You tell him...
Armourer: Nice and light, in a ladies handbag. No stopping power.</item>
        <item>Strangways assistant: W6N calling G7W, how do you hear me? Over.
Radio operator: G7W London, receiving you, over.
Strangways assistant: Stand by to transmit.</item>
        <item>Bond: [Of Taro] Book her superintendent, and, ugh, be careful of her nail varnish.</item>
        <item>Dr. No: That\'s a Dom Pérignon \'55. It would be a pity to break it.
Bond: I prefer the \'53 myself.</item>
        <item>Sister Rose: Come in... you poor dears. We simply didn\'t know when to expect you.
    First it was teatime yesterday, and then dinner. It was only half an hour ago we knew you were on your way.</item>
        <item>Miss Taro: I\'ll just go and put some clothes on.
	Bond: Don\'t go to any trouble on my account.</item>
        <item>Bond: [To the taxi driver, with the Walther in his back] Both hands on the wheel, Mr. Jones, I\'m a very nervous passenger.</item>
        <item>Bond: I admire your courage Miss..?
Silvia: Trench. Silver Trench. I admire your luck Mr?
Bond: Bond. James Bond.</item>
        <item>Leiter: Where did you get that suit?
Bond: My tailor, in Saville Row.
Leiter: Mine\'s from Washington, Felix Leiter: Central Intelligence Agency.</item>
        <item>Quarrel: If that ain\'t a dragon, what is it?
Bond: A dragon that runs on diesel. Forget the spooks, Quarrel. You take the driver. I\'ll take the headlights and tyres.</item>
    </string-array>
</resources>