<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@android:color/black" >

    <LinearLayout
        android:id="@+id/imageViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@android:color/black" >

        <ImageView
            android:id="@+id/bannerImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/main_banner_description"
            android:scaleType="fitCenter"
            android:src="@drawable/all_bonds" />

    </LinearLayout>

    <Button
        android:id="@+id/gunbarrelButton"
        style="@style/ButtonStyles"
        android:layout_below="@id/imageViewContainer"
        android:text="@string/gun_barrels_button_label" />

    <Button
        android:id="@+id/quotesButton"
        style="@style/ButtonStyles"
        android:layout_below="@id/gunbarrelButton"
        android:text="@string/quotes_button_label" />

    <Button
        android:id="@+id/postersButton"
        style="@style/ButtonStyles"
        android:layout_below="@id/quotesButton"
        android:text="@string/movie_posters_button_label" />

    <Button
        android:id="@+id/bondsButton"
        style="@style/ButtonStyles"
        android:layout_below="@id/postersButton"
        android:text="@string/bonds_button_label" />

</RelativeLayout>